Archive2/0c/4d107184c758e2/output
main.cpp: In function 'int main()':
main.cpp:11:12: error: cannot convert 'Dim2D' to 'Dim3D' for argument '1' to 'void foo(Dim3D)'
     foo(dim);
            ^
